--- a/package.json
+++ b/package.json
@@ -8,9 +8,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.4.1",
     "next": "12.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^4.3.1",
+    "react-page-scroller": "^2.2.1",
+    "react-text-typist": "^1.0.9",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "eslint": "8.9.0",
