--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-full-page": "^0.1.12",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-page-scroller": "^2.2.1",
