--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.4.1",
     "next": "12.0.10",
+    "next-images": "^1.8.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-full-page": "^0.1.12",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-page-scroller": "^2.2.1",
+    "react-slick": "^0.28.1",
     "react-text-typist": "^1.0.9",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
