--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "netlify-deploy": "next build && next export",
     "lint": "next lint"
   },
   "dependencies": {
@@ -27,6 +26,8 @@
   },
   "devDependencies": {
     "eslint": "8.9.0",
-    "eslint-config-next": "12.0.10"
+    "eslint-config-next": "12.0.10",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2"
   }
 }
