--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.4.1",
+    "@netlify/plugin-nextjs": "^4.2.8",
     "next": "12.0.10",
     "next-images": "^1.8.4",
     "react": "17.0.2",
