--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "netlify-deploy": "next build && next export",
-    "lint": "next lint"
+    "lint": "next lint",
+    "netlify-deploy": "next build && next export"
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
